--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-handlebars": "^5.2.0",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.11.12"
   }
 }
